--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
 
-# Testing
+# testing
 /coverage
 
-# Next.js
+# next.js
 /.next/
 /out/
 
-# Production
+# production
 /build
 
-# Misc
+# misc
 .DS_Store
 *.pem
 
@@ -26,23 +26,19 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Local Environment Variables
+# local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Turborepo
-.turbo
+# vercel
+.vercel
 
-# Genkit
-.genkit/cache
-.genkit/log
-.genkit/mutex
-.genkit/state
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
-# IDEs
-.idea
-.vscode/
-*.swp
-*~
+# genkit
+.genkit/
+.genkit-cache.json
