--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aarogya-jal-sanket",
+  "name": "aarogya-jal-sanket-community-health",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -46,7 +46,7 @@
     "firebase": "^10.12.4",
     "genkit": "^1.15.0",
     "lucide-react": "^0.417.0",
-    "next": "14.2.5",
+    "next": "15.3.3",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-day-picker": "^8.10.1",
