Ah! Now the error is different from the import issue — this is a Firebas

--- a/package.json
+++ b/package.json
@@ -35,10 +35,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.1.7",
-    "firebase": "^10.12.4",
+    "firebase": "10.12.2",
     "lucide-react": "^0.417.0",
     "next": "15.3.3",
     "next-themes": "^0.3.0",
